--- a/y2024/Crescendo/WebDash.html
+++ b/y2024/Crescendo/WebDash.html
@@ -4,7 +4,7 @@
     source-provider="NetworkTables"
 ><frc-sendable-chooser
         source-provider="NetworkTables"
-        selected="leave wing"
+        selected="ThreeNotesSourceSide76Choreo"
         style="transform: translate(37px, 143px);"
         source-key="/SmartDashboard/Auto Chooser"
         options="[]"
@@ -30,7 +30,7 @@
     ></frc-robot-command><super-structure
         source-key="/SmartDashboard/super structure"
         source-provider="NetworkTables"
-        style="width: 460px; height: 315px; transform: translate(734px, 255px);"
+        style="width: 460px; height: 315px; transform: translate(1010px, 296.6px);"
     >
     </super-structure><frc-robot-command
         source-provider="NetworkTables"
@@ -151,6 +151,7 @@
         source-key="/Arm Pivot Subsystem/Rel Encoder Position"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -181,6 +182,7 @@
         source-key="/SmartDashboard/super structure/PivotMotorPercentage"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -211,6 +213,7 @@
         source-key="/Arm Pivot Subsystem/Abs Encoder Position"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -313,6 +316,7 @@
         source-key="/Shooter Subsystem/Velocity (RPM)"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -343,6 +347,7 @@
         source-key="/SmartDashboard/super structure/ShooterMotorPercentage"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -377,6 +382,7 @@
         style="transform: translate(466px, 551px);"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
@@ -427,7 +433,6 @@
     tab-name="Chassis"
     slot="tab"
     source-provider="NetworkTables"
-    selected=""
 ><frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(7px, 134px); width: 213px; height: 50px;"
@@ -543,6 +548,7 @@
     tab-name="Hanger"
     slot="tab"
     source-provider="NetworkTables"
+    selected=""
 ><frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(166px, 412px);"
@@ -575,4 +581,66 @@
         source-key="/Preferences"
         source-provider="NetworkTables"
         style="transform: translate(120px, 75px); width: 429.2px; height: 332.4px;"
-    ></frc-preferences-wrapper></dashboard-tab>
+    ></frc-preferences-wrapper><vaadin-number-field
+        label="Label"
+        value="0"
+        has-value=""
+        has-label=""
+        source-provider="NetworkTables"
+        style="transform: translate(645px, 117px);"
+        source-key="/Hanger Subsystem/Left Pos: "
+        placeholder=""
+        min="NaN"
+        max="NaN"
+    ><input
+            slot="input"
+            value="0"
+            type="number"
+            id="vaadin-number-field-2606"
+            aria-labelledby="label-vaadin-number-field-2752"
+            aria-describedby=""
+            min="undefined"
+            max="undefined"
+            step="any"
+        ><label
+            slot="label"
+            id="label-vaadin-number-field-2752"
+            for="vaadin-number-field-2606"
+        >Label</label>
+        <div
+            slot="error-message"
+            id="error-message-vaadin-number-field-1766"
+            hidden=""
+        ></div>
+    </vaadin-number-field><vaadin-number-field
+        label="Label"
+        value="0"
+        has-value=""
+        has-label=""
+        source-provider="NetworkTables"
+        style="transform: translate(786px, 221px);"
+        source-key="/Hanger Subsystem/Right Pos"
+        placeholder=""
+        min="NaN"
+        max="NaN"
+    ><input
+            slot="input"
+            value="0"
+            type="number"
+            id="vaadin-number-field-2607"
+            aria-labelledby="label-vaadin-number-field-2753"
+            aria-describedby=""
+            min="undefined"
+            max="undefined"
+            step="any"
+        ><label
+            slot="label"
+            id="label-vaadin-number-field-2753"
+            for="vaadin-number-field-2607"
+        >Label</label>
+        <div
+            slot="error-message"
+            id="error-message-vaadin-number-field-1767"
+            hidden=""
+        ></div>
+    </vaadin-number-field></dashboard-tab>
